--- a/views/mainView.ejs
+++ b/views/mainView.ejs
@@ -120,7 +120,7 @@
                <div class="card-body">
                  <div class="row">
                    <div class="col">
-                     <h5 class="card-title text-uppercase text-muted mb-0">Median points per game</h5>
+                     <h5 class="card-title text-uppercase text-muted mb-0">Points per game</h5>
                      <div>
                        <span class="h2 font-weight-bold mb-0">Konstantina</span>
                        <span class="h2 font-weight-bold mb-0 float-right"><%= findMedianPerPlayer[0] %></span>
@@ -149,7 +149,7 @@
                <div class="card-body">
                  <div class="row">
                    <div class="col">
-                     <h5 class="card-title text-uppercase text-muted mb-0">Median points per move</h5>
+                     <h5 class="card-title text-uppercase text-muted mb-0">Points per move</h5>
                      <div>
                        <span class="h2 font-weight-bold mb-0">Konstantina</span>
                        <span class="h2 font-weight-bold mb-0 float-right"><%= findMedianPerMovePerPlayer[0] %></span>
