--- a/views/mainView.ejs
+++ b/views/mainView.ejs
@@ -1,264 +1,55 @@
- <!DOCTYPE html>
- <html lang="en"
-       dir="ltr">
+<!DOCTYPE html>
+<html lang="en"
+      dir="ltr">
 
- <head>
-   <meta charset="utf-8" />
-    
-   <link rel="stylesheet"
-         href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-         crossorigin="anonymous">
-   <link rel="stylesheet"
-         href="/css/argon.css" />
-   <link rel="stylesheet"
-         href="/css/styles.css" />
-   <!-- Icons -->
-  <link rel="stylesheet" href="css/all.min.css">
-   <title>Scrabble</title>
- </head>
+<head>
+  <meta charset="utf-8" />
 
- <body>
-   <!-- Sidenav -->
-   <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white"
-        id="sidenav-main">
-     <div class="scrollbar-inner">
-       <!-- Brand -->
-       <div class="sidenav-header  align-items-center">
-         <a class="navbar-brand"
-            href="javascript:void(0)">
-           <img src="assets/img/brand/blue.png"
-                class="navbar-brand-img"
-                alt="...">
-         </a>
-       </div>
-       <div class="navbar-inner">
-         <!-- Collapse -->
-         <div class="collapse navbar-collapse"
-              id="sidenav-collapse-main">
-           <!-- Nav items -->
-           <ul class="navbar-nav">
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="./profile">
-                 <i class="ni ni-single-02 text-yellow"></i>
-                 <span class="nav-link-text">Profile</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link active"
-                  href="examples/dashboard.html">
-                 <i class="ni ni-tv-2 text-primary"></i>
-                 <span class="nav-link-text">Dashboard</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="examples/icons.html">
-                 <i class="ni ni-planet text-orange"></i>
-                 <span class="nav-link-text">Icons</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="examples/login.html">
-                 <i class="ni ni-key-25 text-info"></i>
-                 <span class="nav-link-text">Login</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="examples/register.html">
-                 <i class="ni ni-circle-08 text-pink"></i>
-                 <span class="nav-link-text">Register</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="examples/upgrade.html">
-                 <i class="ni ni-send text-dark"></i>
-                 <span class="nav-link-text">Upgrade</span>
-               </a>
-             </li>
-           </ul>
-           <!-- Divider -->
-           <hr class="my-3">
-           <!-- Heading -->
-           <h6 class="navbar-heading p-0 text-muted">
-             <span class="docs-normal">Documentation</span>
-           </h6>
-           <!-- Navigation -->
-           <ul class="navbar-nav mb-md-3">
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html"
-                  target="_blank">
-                 <i class="ni ni-spaceship"></i>
-                 <span class="nav-link-text">Getting started</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html"
-                  target="_blank">
-                 <i class="ni ni-palette"></i>
-                 <span class="nav-link-text">Foundation</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="https://demos.creative-tim.com/argon-dashboard/docs/components/alerts.html"
-                  target="_blank">
-                 <i class="ni ni-ui-04"></i>
-                 <span class="nav-link-text">Components</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link"
-                  href="https://demos.creative-tim.com/argon-dashboard/docs/plugins/charts.html"
-                  target="_blank">
-                 <i class="ni ni-chart-pie-35"></i>
-                 <span class="nav-link-text">Plugins</span>
-               </a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link active active-pro"
-                  href="examples/upgrade.html">
-                 <i class="ni ni-send text-dark"></i>
-                 <span class="nav-link-text">Upgrade to PRO</span>
-               </a>
-             </li>
-           </ul>
-         </div>
-       </div>
-     </div>
-   </nav>
-   <!-- Main content -->
-   <div class="main-content"
-        id="panel">
-     <!-- Topnav -->
-     <%- include('partials/topnav'); -%>
-     <!-- Header -->
-     <div class="header bg-primary pb-6">
-       <div class="container-fluid">
-         <div class="header-body">
-           <div class="row align-items-center py-4">
-             <div class="col-lg-6 col-7">
-               <h6 class="h2 text-white d-inline-block mb-0">
-               Scrabble Statistics</h6>
-               <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
-                <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-                  <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                  <li class="breadcrumb-item"><a href="#">Dashboards</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Default</li>
-                </ol>
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+        crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="/css/argon.css" />
+  <link rel="stylesheet"
+        href="/css/styles.css" />
+  <!-- Icons -->
+  <link rel="stylesheet"
+        href="css/all.min.css">
+  <title>Scrabble</title>
+</head>
+
+<body>
+  <!-- Sidenav -->
+  <%- include('partials/sidenav'); -%>
+  <!-- Main content -->
+  <div class="main-content"
+       id="panel">
+    <!-- Topnav -->
+    <%- include('partials/topnav'); -%>
+    <!-- Header -->
+    <div class="header bg-primary pb-6"
+         style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
+      <!-- Mask -->
+      <span class="mask bg-gradient-default opacity-8"></span>
+      <div class="container-fluid">
+        <div class="header-body">
+          <div class="row align-items-center py-4">
+            <div class="col-lg-6 col-7">
+              <h6 class="h2 text-white d-inline-block mb-0">
+                Scrabble Statistics</h6>
+              <nav aria-label="breadcrumb"
+                   class="d-none d-md-inline-block ml-md-4">
               </nav>
-             </div>
-           </div>
-           <!-- Card stats -->
-           <%- include('partials/card_stats'); -%>
-         </div>
-       </div>
-     </div>
-     <div class="container-fluid mt--6">
-       <div class="row">
-         <div class="col">
-           <div class="card">
-             <!-- Card header -->
-             <div class="card-header border-0">
-               <h3 class="mb-0">Games Statistics</h3>
-             </div>
-             <!-- Light table -->
-             <div class="table-responsive font-weight-bold">
-               <table class="table align-items-center table-flush">
-                 <thead class="thead-light">
-                   <tr>
-                     <th scope="col"
-                         class="sort"
-                         data-sort="name">Winner</th>
-                     <th scope="col"
-                         class="sort text-center"
-                         data-sort="budget ">Score</th>
-                     <th scope="col"
-                         class="sort"
-                         data-sort="status">Loser</th>
-                     <th scope="col"
-                         class="text-center">Score</th>
-                     <th scope="col"
-                         class="sort text-center"
-                         data-sort="completion">Difference</th>
-                   </tr>
-                 </thead>
-                 <tbody class="list">
-                   <% for (var i=0; i<resultArray.length; i++){ %>
-                   <% if (resultArray[i] == "Christos" ) { %>
-                   <tr class="player1-bg">
-                     <th scope="row ">
-                       <div class="media align-items-center">
-                         <div class="media-body">
-                           <span class="name mb-0 player-text-sm"><%= resultArray[i] %></span>
-                         </div>
-                       </div>
-                     </th>
-                     <td class="budget text-center">
-                       <%= findAllWinnerScores[i] %>
-                     </td>
-                     <td>
-                       <span class="badge badge-dot mr-4">
-                         <i class="bg-warning"></i>
-                         <span class="status"><%= losersArray[i] %></span>
-                       </span>
-                     </td>
-                     <td>
-                       <span class="status text-center"><%= findAllLoserScores[i] %></span>
-                     </td>
-                     <td>
-                       <div class="d-flex align-items-center">
-                         <span class="completion mr-2 text-center"><%= differenceArray[i] %></span>
-                       </div>
-                     </td>
-                   </tr>
-                   <% } else { %>
-                   <tr class="player2-bg">
-                     <th scope="row">
-                       <div class="media align-items-center">
-                         <div class="media-body">
-                           <span class="name mb-0 player-text-sm"><%= resultArray[i] %></span>
-                         </div>
-                       </div>
-                     </th>
-                     <td class="budget text-center">
-                       <%= findAllWinnerScores[i] %>
-                     </td>
-                     <td>
-                       <span class="badge badge-dot mr-4">
-                         <i class="bg-warning"></i>
-                         <span class="status"><%= losersArray[i] %></span>
-                       </span>
-                     </td>
-                     <td>
-                       <div class="avatar-group">
-                         <span class="status text-center"><%= findAllLoserScores[i] %></span>
-                       </div>
-                     </td>
-                     <td>
-                       <div class="d-flex align-items-center">
-                         <span class="completion mr-2 text-center"><%= differenceArray[i] %></span>
-                       </div>
-                     </td>
-                   </tr>
-                   <% } %>
-                   <% } %>
-                 </tbody>
-               </table>
-             </div>
-           </div>
-         </div>
-       </div>
-       <!-- Footer -->
-       <%- include('partials/footer'); -%>
-     </div>
-   </div>
- </body>
+            </div>
+          </div>
+          <!-- Card stats -->
+          <%- include('partials/card_stats'); -%>
+        </div>
+      </div>
+    </div>
+    <%- include('partials/table'); -%>
+  </div>
+</body>
 
- </html>
+</html>
