--- a/views/partials/table.ejs
+++ b/views/partials/table.ejs
@@ -1,98 +1,89 @@
 <div class="container-fluid mt--6">
-    <div class="row">
-      <div class="col">
-        <div class="card">
-          <!-- Card header -->
-          <div class="card-header border-0">
-            <h3 class="mb-0">Games Statistics</h3>
-          </div>
-          <!-- Light table -->
-          <div class="table-responsive font-weight-bold">
-            <table class="table align-items-center table-flush">
-              <thead class="thead-light">
-                <tr>
-                  <th scope="col"
-                      class="sort"
-                      data-sort="name">Winner</th>
-                  <th scope="col"
-                      class="sort text-center"
-                      data-sort="budget ">Score</th>
-                  <th scope="col"
-                      class="sort"
-                      data-sort="status">Loser</th>
-                  <th scope="col"
-                      class="text-center">Score</th>
-                  <th scope="col"
-                      class="sort text-center"
-                      data-sort="completion">Difference</th>
-                </tr>
-              </thead>
-              <tbody class="list">
-                <% for (var i=0; i<resultArray.length; i++){ %>
-                <% if (resultArray[i] == "Christos" ) { %>
-                <tr class="player1-bg">
-                  <th scope="row ">
-                    <div class="media align-items-center">
-                      <div class="media-body">
-                        <span class="name mb-0 player-text-sm"><%= resultArray[i] %></span>
-                      </div>
-                    </div>
-                  </th>
-                  <td class="budget text-center">
-                    <%= findAllWinnerScores[i] %>
-                  </td>
-                  <td>
-                    <span class="badge badge-dot mr-4">
-                      <i class="bg-warning"></i>
-                      <span class="status"><%= losersArray[i] %></span>
-                    </span>
-                  </td>
-                  <td>
-                    <span class="status text-center"><%= findAllLoserScores[i] %></span>
-                  </td>
-                  <td>
-                    <div class="d-flex align-items-center">
-                      <span class="completion mr-2 text-center"><%= differenceArray[i] %></span>
-                    </div>
-                  </td>
-                </tr>
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <!-- Card header -->
+        <div class="card-header border-0">
+          <h3 class="mb-0">Games Statistics</h3>
+        </div>
+        <!-- Light table -->
+        <div class="table-responsive font-weight-bold">
+          <table class="table align-items-center table-flush">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col"
+                    class="sort"
+                    data-sort="name">Winner</th>
+                <th scope="col"
+                    class="sort text-center"
+                    data-sort="budget ">Score</th>
+                <th scope="col"
+                    class="sort"
+                    data-sort="status">Loser</th>
+                <th scope="col"
+                    class="text-center">Score</th>
+                <th scope="col"
+                    class="sort text-center"
+                    data-sort="completion">Difference</th>
+              </tr>
+            </thead>
+            <tbody class="list">
+              <% for (var i=0; i<resultArray.length; i++){ %>
+              <% if (resultArray[i] == "Christos" ) { %>
+              <tr class="player1-bg">
                 <% } else { %>
-                <tr class="player2-bg">
-                  <th scope="row">
+              <tr class="player2-bg">
+                <% } %>
+
+                <th scope="row ">
+                  <a class="nav-link"
+                     href="./single-game-stats">
                     <div class="media align-items-center">
                       <div class="media-body">
                         <span class="name mb-0 player-text-sm"><%= resultArray[i] %></span>
                       </div>
                     </div>
-                  </th>
-                  <td class="budget text-center">
+                  </a>
+                </th>
+                <td class="budget text-center">
+                  <a class="nav-link"
+                     href="./single-game-stats"
+                     onclick="sortTable()">
                     <%= findAllWinnerScores[i] %>
-                  </td>
-                  <td>
+                  </a>
+                </td>
+                <td>
+                  <a class="nav-link"
+                     href="./single-game-stats">
                     <span class="badge badge-dot mr-4">
                       <i class="bg-warning"></i>
                       <span class="status"><%= losersArray[i] %></span>
                     </span>
-                  </td>
-                  <td>
-                    <div class="avatar-group">
-                      <span class="status text-center"><%= findAllLoserScores[i] %></span>
-                    </div>
-                  </td>
-                  <td>
+                  </a>
+                </td>
+                <td>
+                  <a class="nav-link"
+                     href="./single-game-stats">
+                    <span class="status text-center"><%= findAllLoserScores[i] %></span>
+                  </a>
+                </td>
+                <td>
+                  <a class="nav-link"
+                     href="./single-game-stats">
                     <div class="d-flex align-items-center">
                       <span class="completion mr-2 text-center"><%= differenceArray[i] %></span>
                     </div>
-                  </td>
-                </tr>
-                <% } %>
-                <% } %>
-              </tbody>
-            </table>
-          </div>
+                  </a>
+                </td>
+              </tr>
+              <% } %>
+
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
-    <!-- Footer -->
-    <%- include('footer'); -%>
   </div>
+  <!-- Footer -->
+  <%- include('footer'); -%>
+</div>
