--- a/views/partials/single-game-stats.ejs
+++ b/views/partials/single-game-stats.ejs
@@ -14,8 +14,7 @@
   <link rel="stylesheet"
         href="/css/styles.css" />
   <!-- Icons -->
-  <link rel="stylesheet"
-        href="css/all.min.css">
+  <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
   <title>Scrabble</title>
 </head>
 
@@ -133,6 +132,14 @@
             </div>
           </div>
         </div>
+      </div>
+      <div>
+        <nav aria-label="breadcrumb"
+             class="d-none d-md-inline-block ml-md-4">
+          <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+            <li class="breadcrumb-item"><a href="/scrabble-statistics">Return to Scrabble Statistics</a></li>
+          </ol>
+        </nav>
       </div>
       <!-- Footer -->
       <%- include('footer'); -%>
