--- a/views/scrabble_statistics.ejs
+++ b/views/scrabble_statistics.ejs
@@ -14,8 +14,7 @@
   <link rel="stylesheet"
         href="/css/styles.css" />
   <!-- Icons -->
-  <link rel="stylesheet"
-        href="css/all.min.css">
+  <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
   <title>Scrabble</title>
 </head>
 
@@ -50,6 +49,10 @@
     </div>
     <%- include('partials/table'); -%>
   </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <!-- Argon JS -->
+  <script src="js/argon.js?v=1.2.0"></script>
 </body>
 
 </html>
