--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,43 +14,47 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 -->
 <!DOCTYPE html>
- <html lang="en"
-       dir="ltr">
+<html lang="en"
+      dir="ltr">
 
- <head>
-   <meta charset="utf-8" />
-    
-   <link rel="stylesheet"
-         href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-         crossorigin="anonymous">
-   <link rel="stylesheet"
-         href="/css/argon.css" />
-   <link rel="stylesheet"
-         href="/css/styles.css" />
-   <!-- Icons -->
-  <link rel="stylesheet" href="css/all.min.css">
-   <title>Scrabble</title>
- </head>
+<head>
+  <meta charset="utf-8" />
+
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+        crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="/css/argon.css" />
+  <link rel="stylesheet"
+        href="/css/styles.css" />
+  <!-- Icons -->
+  <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
+  
+  <title>Scrabble</title>
+</head>
 
 <body>
   <!-- Sidenav -->
   <%- include('partials/sidenav'); -%>
   <!-- Main content -->
-  <div class="main-content" id="panel">
+  <div class="main-content"
+       id="panel">
     <!-- Topnav -->
     <%- include('partials/topnav'); -%>
     <!-- Header -->
-    <div class="header pb-6 d-flex align-items-center" style="min-height: 500px; background-image: url(../assets/profile-cover.jpg); background-size: cover; background-position: center top;">
+    <div class="header pb-6 d-flex align-items-center"
+         style="min-height: 500px; background-image: url(../assets/mick-haupt-MHeyjronqzw-unsplash.jpg); background-size: cover; background-position: center top;">
       <!-- Mask -->
-      <span class="mask bg-gradient-default opacity-8"></span>
+      <span class="mask bg-gradient-default opacity-6"></span>
       <!-- Header container -->
       <div class="container-fluid d-flex align-items-center">
         <div class="row">
-          <div class="col-lg-7 col-md-10">
-            <h1 class="display-2 text-white">Hello Jesse</h1>
-            <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work and manage your projects or assigned tasks</p>
-            <a href="#!" class="btn btn-neutral">Edit profile</a>
+          <div class="col-lg-7 col-md-10 col-sm-10">
+            <h1 class="display-2 text-white home-title">Store your memories here!</h1>
+            <p class="home-subtitle">This is a page where you can store your scrabble scores</p>
+            <a href="#!"
+               class="btn btn-neutral rounded-pill home-btn-start-game">Start a new game!</a>
           </div>
         </div>
       </div>
@@ -60,20 +64,25 @@
       <div class="row">
         <div class="col-xl-4 order-xl-2">
           <div class="card card-profile">
-            <img src="../assets/img-1-1000x600.jpg" alt="Image placeholder" class="card-img-top">
+            <img src="../assets/img-1-1000x600.jpg"
+                 alt="Image placeholder"
+                 class="card-img-top">
             <div class="row justify-content-center">
               <div class="col-lg-3 order-lg-2">
                 <div class="card-profile-image">
                   <a href="#">
-                    <img src="../assets/team-4.jpg" class="rounded-circle">
+                    <img src="../assets/team-4.jpg"
+                         class="rounded-circle">
                   </a>
                 </div>
               </div>
             </div>
             <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
               <div class="d-flex justify-content-between">
-                <a href="#" class="btn btn-sm btn-info  mr-4 ">Connect</a>
-                <a href="#" class="btn btn-sm btn-default float-right">Message</a>
+                <a href="#"
+                   class="btn btn-sm btn-info  mr-4 ">Connect</a>
+                <a href="#"
+                   class="btn btn-sm btn-default float-right">Message</a>
               </div>
             </div>
             <div class="card-body pt-0">
@@ -120,7 +129,8 @@
                   <h3 class="mb-0">Edit profile </h3>
                 </div>
                 <div class="col-4 text-right">
-                  <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+                  <a href="#!"
+                     class="btn btn-sm btn-primary">Settings</a>
                 </div>
               </div>
             </div>
@@ -131,28 +141,47 @@
                   <div class="row">
                     <div class="col-lg-6">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-username">Username</label>
-                        <input type="text" id="input-username" class="form-control" placeholder="Username" value="lucky.jesse">
+                        <label class="form-control-label"
+                               for="input-username">Username</label>
+                        <input type="text"
+                               id="input-username"
+                               class="form-control"
+                               placeholder="Username"
+                               value="lucky.jesse">
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-email">Email address</label>
-                        <input type="email" id="input-email" class="form-control" placeholder="jesse@example.com">
+                        <label class="form-control-label"
+                               for="input-email">Email address</label>
+                        <input type="email"
+                               id="input-email"
+                               class="form-control"
+                               placeholder="jesse@example.com">
                       </div>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-6">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-first-name">First name</label>
-                        <input type="text" id="input-first-name" class="form-control" placeholder="First name" value="Lucky">
+                        <label class="form-control-label"
+                               for="input-first-name">First name</label>
+                        <input type="text"
+                               id="input-first-name"
+                               class="form-control"
+                               placeholder="First name"
+                               value="Lucky">
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-last-name">Last name</label>
-                        <input type="text" id="input-last-name" class="form-control" placeholder="Last name" value="Jesse">
+                        <label class="form-control-label"
+                               for="input-last-name">Last name</label>
+                        <input type="text"
+                               id="input-last-name"
+                               class="form-control"
+                               placeholder="Last name"
+                               value="Jesse">
                       </div>
                     </div>
                   </div>
@@ -164,28 +193,47 @@
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-address">Address</label>
-                        <input id="input-address" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
+                        <label class="form-control-label"
+                               for="input-address">Address</label>
+                        <input id="input-address"
+                               class="form-control"
+                               placeholder="Home Address"
+                               value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09"
+                               type="text">
                       </div>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-city">City</label>
-                        <input type="text" id="input-city" class="form-control" placeholder="City" value="New York">
+                        <label class="form-control-label"
+                               for="input-city">City</label>
+                        <input type="text"
+                               id="input-city"
+                               class="form-control"
+                               placeholder="City"
+                               value="New York">
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-country">Country</label>
-                        <input type="text" id="input-country" class="form-control" placeholder="Country" value="United States">
+                        <label class="form-control-label"
+                               for="input-country">Country</label>
+                        <input type="text"
+                               id="input-country"
+                               class="form-control"
+                               placeholder="Country"
+                               value="United States">
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-country">Postal code</label>
-                        <input type="number" id="input-postal-code" class="form-control" placeholder="Postal code">
+                        <label class="form-control-label"
+                               for="input-country">Postal code</label>
+                        <input type="number"
+                               id="input-postal-code"
+                               class="form-control"
+                               placeholder="Postal code">
                       </div>
                     </div>
                   </div>
@@ -196,7 +244,9 @@
                 <div class="pl-lg-4">
                   <div class="form-group">
                     <label class="form-control-label">About Me</label>
-                    <textarea rows="4" class="form-control" placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
+                    <textarea rows="4"
+                              class="form-control"
+                              placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
                   </div>
                 </div>
               </form>
@@ -208,6 +258,10 @@
       <%- include('partials/footer'); -%>
     </div>
   </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <!-- Argon JS -->
+  <script src="js/argon.js?v=1.2.0"></script>
 </body>
 
 </html>
