--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -23,12 +23,12 @@
       <li class="nav-item active">
         <a class="nav-link text-sm font-weight-bold"
            style="color: white;"
-           href="./profile">Profile <span class="sr-only">(current)</span></a>
+           href="./home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link text-sm font-weight-bold"
            style="color: white;"
-           href="./">Game_Statistics <span class="sr-only">(current)</span></a>
+           href="./">Game Statistics <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
