--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,7 +60,7 @@
       </div>
     </div>
     <!-- Page content -->
-    <div class="container-fluid mt--6">
+    <!-- <div class="container-fluid mt--6">
       <div class="row">
         <div class="col-xl-4 order-xl-2">
           <div class="card card-profile">
@@ -187,7 +187,7 @@
                   </div>
                 </div>
                 <hr class="my-4" />
-                <!-- Address -->
+                <!-- Address 
                 <h6 class="heading-small text-muted mb-4">Contact information</h6>
                 <div class="pl-lg-4">
                   <div class="row">
@@ -239,7 +239,7 @@
                   </div>
                 </div>
                 <hr class="my-4" />
-                <!-- Description -->
+                <!-- Description 
                 <h6 class="heading-small text-muted mb-4">About me</h6>
                 <div class="pl-lg-4">
                   <div class="form-group">
@@ -254,10 +254,10 @@
           </div>
         </div>
       </div>
-      <!-- Footer -->
+      <!-- Footer
       <%- include('partials/footer'); -%>
     </div>
-  </div>
+  </div> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <!-- Argon JS -->
