--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -1,11 +1,51 @@
+<nav class="navbar navbar-expand-lg navbar-dark"
+     style="background-color: #5e72e4;">
+
+  <a class="navbar-brand"
+     href="#">
+    <img src="assets/2263d6a64d36999964e5c2aa54a7fa0f.png"
+         width="30"
+         height="30"
+         class="d-inline-block align-top"
+         alt="Scrabble Letter A">
+  </a>
+
+  <button class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse"
+       id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/scrabble-statistics">Scrabble_Statistics <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+
+
 <!-- Topnav -->
-<nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
+<!-- <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- Navbar links -->
+      <!-- Navbar links 
       <ul class="navbar-nav align-items-center  ml-md-auto ">
         <li class="nav-item d-xl-none">
-          <!-- Sidenav toggler -->
+          <!-- Sidenav toggler 
           <div class="pr-3 sidenav-toggler sidenav-toggler-dark" data-action="sidenav-pin" data-target="#sidenav-main">
             <div class="sidenav-toggler-inner">
               <i class="sidenav-toggler-line"></i>
@@ -24,16 +64,16 @@
             <i class="ni ni-bell-55"></i>
           </a>
           <div class="dropdown-menu dropdown-menu-xl  dropdown-menu-right  py-0 overflow-hidden">
-            <!-- Dropdown header -->
+            <!-- Dropdown header 
             <div class="px-3 py-3">
               <h6 class="text-sm text-muted m-0">You have <strong class="text-primary">13</strong> notifications.</h6>
             </div>
-            <!-- List group -->
+            <!-- List group 
             <div class="list-group list-group-flush">
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                    <!-- Avatar 
                     <img alt="Image placeholder" src="/assets/img-1-1000x600.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -52,7 +92,7 @@
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                    <!-- Avatar 
                     <img alt="Image placeholder" src="/assets/img-1-1000x600.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -71,7 +111,7 @@
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                    <!-- Avatar 
                     <img alt="Image placeholder" src="/assets/img-1-1000x600.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -90,7 +130,7 @@
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                    <!-- Avatar 
                     <img alt="Image placeholder" src="/assets/img-1-1000x600.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -109,7 +149,7 @@
               <a href="#!" class="list-group-item list-group-item-action">
                 <div class="row align-items-center">
                   <div class="col-auto">
-                    <!-- Avatar -->
+                    <!-- Avatar
                     <img alt="Image placeholder" src="/assets/img-1-1000x600.jpg" class="avatar rounded-circle">
                   </div>
                   <div class="col ml--2">
@@ -126,7 +166,7 @@
                 </div>
               </a>
             </div>
-            <!-- View all -->
+            <!-- View all 
             <a href="#!" class="dropdown-item text-center text-primary font-weight-bold py-3">View all</a>
           </div>
         </li>
@@ -218,4 +258,4 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> -->
