--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,3 +84,20 @@ th a, td a {
   padding-left: 1.5rem;
   padding-right: 3rem;
 }
+
+.nav-link.font-weight-bold:hover{
+  background-color:  #a4addf;
+}
+
+.my-btn-link{
+  border:none;
+  background-color: inherit;
+  color: inherit; 
+  width:100%;
+  height:100%;
+  padding: 0.3rem;
+}
+
+.my-btn-link:active, .my-btn-link:focus{
+  outline : none;
+}
