--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -1,4 +1,4 @@
-<nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white"
+<!-- <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white"
      id="sidenav-main">
   <div class="scrollbar-inner">
     <button type="button"
@@ -6,9 +6,9 @@
             aria-label="Close"
             onclick="CloseSideBar()">
       <span aria-hidden="true">&times;</span>
-    </button>
+    </button> -->
     <!-- Brand -->
-    <div class="sidenav-header  align-items-center">
+    <!-- <div class="sidenav-header  align-items-center">
       <a class="navbar-brand"
          href="javascript:void(0)">
         <img src="assets/2263d6a64d36999964e5c2aa54a7fa0f.png"
@@ -16,12 +16,12 @@
              alt="Scrabble Letter A">
       </a>
     </div>
-    <div class="navbar-inner">
+    <div class="navbar-inner"> -->
       <!-- Collapse -->
-      <div class="collapse navbar-collapse hidden"
-           id="sidenav-collapse-main">
+      <!-- <div class="collapse navbar-collapse hidden"
+           id="sidenav-collapse-main"> -->
         <!-- Nav items -->
-        <ul class="navbar-nav">
+        <!-- <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link"
                href="./">
@@ -38,7 +38,7 @@
               <i class="ni ni-tv-2 text-primary"></i>
               <span class="nav-link-text">Scrabble Statistics</span>
             </a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
                <a class="nav-link"
                   href="examples/icons.html">
@@ -113,8 +113,8 @@
                 <span class="nav-link-text">Upgrade to PRO</span>
               </a>
             </li> -->
-        </ul>
+        <!-- </ul>
       </div>
     </div>
   </div>
-</nav>
+</nav> -->
