1)Favicon added, 2)Image on navbar leads to home page, 3)Better implementation of findMedianPerMovePerPlayer implemented

--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -2,7 +2,7 @@
      style="background-color: #5e72e4;">
 
   <a class="navbar-brand"
-     href="#">
+     href="/">
     <img src="assets/2263d6a64d36999964e5c2aa54a7fa0f.png"
          width="30"
          height="30"
