--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,20 +18,20 @@
       dir="ltr">
 
 <head>
-  <meta charset="utf-8" />
-
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-        crossorigin="anonymous">
-  <link rel="stylesheet"
-        href="/css/argon.css" />
-  <link rel="stylesheet"
-        href="/css/styles.css" />
-  <!-- Icons -->
-  <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
-  
-  <title>Scrabble</title>
+      <meta charset="utf-8" />
+      <title>Scrabble</title>
+      <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+            crossorigin="anonymous">
+      <link rel="stylesheet"
+            href="/css/argon.css" />
+      <link rel="stylesheet"
+            href="/css/styles.css" />
+      <!-- Icons -->
+      <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
+      <!-- Favicon -->
+      <link rel="icon" href="/assets/2263d6a64d36999964e5c2aa54a7fa0f - Copy.ico">
 </head>
 
 <body>
