1)Error page added, 2)Navigation button added, 3)Files concerning sidenav bar deleted

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
         <div class="col-lg-7 col-md-10 col-sm-10">
           <h1 class="display-2 text-white home-title">Store your memories here!</h1>
           <p class="home-subtitle">This is a page where you can store your scrabble scores</p>
-          <a href="#!"
+          <a href="/error-page"
              class="btn btn-neutral rounded-pill home-btn-start-game">Start a new game!</a>
         </div>
       </div>
