--- a/views/partials/single-game-stats.ejs
+++ b/views/partials/single-game-stats.ejs
@@ -16,9 +16,10 @@
           <div class="col-lg-6 col-7">
             <h6 class="h2 text-white d-inline-block mb-0">
               Scrabble Statistics</h6>
-            <nav aria-label="breadcrumb"
-                 class="d-none d-md-inline-block ml-md-4">
-            </nav>
+          </div>
+          <div class="col-lg-6 col-5">
+            <a href="/scrabble-statistics"
+               class="btn btn-neutral rounded-pill home-btn-start-game">Go back to Scrabble Statistics</a>
           </div>
         </div>
       </div>
@@ -111,14 +112,6 @@
           </div>
         </div>
       </div>
-    </div>
-    <div>
-      <nav aria-label="breadcrumb"
-           class="d-none d-md-inline-block ml-md-4">
-        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-          <li class="breadcrumb-item"><a href="/scrabble-statistics">Return to Scrabble Statistics</a></li>
-        </ol>
-      </nav>
     </div>
     <!-- Footer -->
     <%- include('footer'); -%>
