1)Graphical interface now corresponds to game stats, 2)Minor correction in scrabble_lib function

--- a/views/partials/card_stats.ejs
+++ b/views/partials/card_stats.ejs
@@ -8,11 +8,11 @@
             <div class="col">
               <h5 class="card-title text-uppercase text-muted mb-0">Score</h5>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[0] %> </span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[0] %> </span>
                 <span class="h2 font-weight-bold mb-0 float-right"> <%= score[0] %></span>
               </div>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[1] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[1] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"> <%= score[1] %></span>
               </div>
             </div>
@@ -37,11 +37,11 @@
             <div class="col">
               <h5 class="card-title text-uppercase text-muted mb-0">Top Game Score</h5>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[0] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[0] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"> <%= maximumGameScore[0] %> </span>
               </div>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[1] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[1] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"><%= maximumGameScore[1] %></span>
               </div>
             </div>
@@ -66,11 +66,11 @@
             <div class="col">
               <h5 class="card-title text-uppercase text-muted mb-0">Top Single Move</h5>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[0] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[0] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"><%= findTopMovePerPlayer[0] %></span>
               </div>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[1] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[1] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"><%= findTopMovePerPlayer[1] %></span>
               </div>
             </div>
@@ -95,11 +95,11 @@
             <div class="col">
               <h5 class="card-title text-uppercase text-muted mb-0">Points per game</h5>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[0] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[0] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"><%= findMedianPerPlayer[0] %></span>
               </div>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[1] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[1] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"><%= findMedianPerPlayer[1] %></span>
               </div>
             </div>
@@ -124,11 +124,11 @@
             <div class="col">
               <h5 class="card-title text-uppercase text-muted mb-0">Points per move</h5>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[0] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[0] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"><%= findMedianPerMovePerPlayer[0] %></span>
               </div>
               <div>
-                <span class="h2 font-weight-bold mb-0"><%= find2PlayersNames[1] %></span>
+                <span class="h2 font-weight-bold mb-0"><%= findPlayersNames[1] %></span>
                 <span class="h2 font-weight-bold mb-0 float-right"><%= findMedianPerMovePerPlayer[1] %></span>
               </div>
             </div>
