--- a/views/partials/single-game-stats.ejs
+++ b/views/partials/single-game-stats.ejs
@@ -47,7 +47,7 @@
                 <tbody class="list">
                   <tr>
                     <th scope="row">
-                      <div class="budget sgs_players_name">
+                      <div id="player1name" class="budget sgs_players_name">
                         <span class="name mb-0 text-sm"><%= findSpecificStats[0].name %></span>
                       </div>
                     </th>
@@ -89,26 +89,11 @@
                 <h6 class="text-light text-uppercase ls-1 mb-1">Overview</h6>
                 <h5 class="h3 text-white mb-0">Points per Round</h5>
               </div>
-              <div class="col">
-                <ul class="nav nav-pills justify-content-end">
-                  <li class="nav-item mr-2 mr-md-0"
-                      data-toggle="chart"
-                      data-target="#chart-sales-dark"
-                      data-update='{"data":{"datasets":[{"data":[0, 7, 10, 10, 11, 3, 2, 60, 60]}]}}'
-                      data-prefix="$"
-                      data-suffix="k">
-                  </li>
-                </ul>
-              </div>
             </div>
           </div>
           <div class="card-body">
             <!-- Chart -->
-            <div class="chart">
-              <!-- Chart wrapper -->
-              <canvas id="chart-sales-dark"
-                      class="chart-canvas"></canvas>
-            </div>
+              <canvas id="myChart"></canvas>
           </div>
         </div>
       </div>
@@ -119,5 +104,82 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+
+<script>
+
+  /* Get stats of first player */
+  var player1Name = "<%= findSpecificStats[0].name %>";
+  var player1Scores = "<%= findSpecificStats[0].scores %>".split(',').map(Number);
+  /* Get stats of second player */
+  var player2Name = "<%= findSpecificStats[1].name %>";
+  var player2Scores = "<%= findSpecificStats[1].scores %>".split(',').map(Number);
+  /* Get number of rounds in a table */
+  var length = parseInt("<%= findSpecificStats[0].scores.length %>");
+  var rounds = [];
+  for(var i=1;i<=length;i++){
+    rounds.push(i);
+  }
+
+  var ctx = document.getElementById('myChart');
+  var myChart = new Chart(ctx, {
+    type: 'line',
+    data: {
+      labels: rounds,
+      datasets: [{
+          label: player1Name,
+          borderColor: "#3e95cd",
+          fill: false,
+          data: player1Scores
+        },
+        {
+          label: player2Name,
+          borderColor: "#5e72e4",
+          fill: false,
+          data: player2Scores
+        }
+      ]
+    },
+    options: {
+      responsive: true,
+      legend: {
+        display: true,
+        position: "top",
+        align: "end",
+        labels: {
+          fontSize: 18,
+          fontFamily: "'Roboto', sans-serif",
+          fontColor: '#FFFFFF',
+          fontStyle: '500',
+          boxWidth: 40
+        }
+      },
+      scales: {
+        xAxes: [{
+          ticks: {
+            fontSize: 14,
+            fontFamily: "'Roboto', sans-serif",
+            fontColor: '#FFFFFF',
+            fontStyle: '500'
+          },
+          gridLines: {
+            drawOnChartArea: false
+          }
+        }],
+        yAxes: [{
+          ticks: {
+            fontSize: 14,
+            fontFamily: "'Roboto', sans-serif",
+            fontColor: '#ffffff',
+            fontStyle: '500'
+          },
+          gridLines: {
+            drawOnChartArea: false
+          }
+        }]
+      }
+    }
+  });
+</script>
+
 
 <%- include('end_file'); -%>
