--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -29,7 +29,7 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
-           href="/scrabble-statistics">Scrabble_Statistics <span class="sr-only">(current)</span></a>
+           href="/scrabble-statistics">Scrabble Statistics <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
