--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,8 +6,7 @@
   <!-- Topnav -->
   <%- include('partials/topnav'); -%>
   <!-- Header -->
-  <div class="header pb-6 d-flex align-items-center"
-       style="min-height: 500px; background-image: url(../assets/mick-haupt-MHeyjronqzw-unsplash.jpg); background-size: cover; background-position: center top;">
+  <div class="header pb-6 d-flex align-items-center home-page-bg-img">
     <!-- Mask -->
     <span class="mask bg-gradient-default opacity-6"></span>
     <!-- Header container -->
@@ -23,7 +22,7 @@
     </div>
   </div>
   <!-- Page content -->
-  <div class="container-fluid mt--6">
+  <!-- <div class="container-fluid mt--6">
     <div class="row">
       <!-- <div class="col-xl-4 order-xl-2">
         <div class="card card-profile">
@@ -216,7 +215,7 @@
           </div>
         </div>
       </div> -->
-    </div>
+  <!--  </div> -->
     <!-- Footer -->
     <%- include('partials/footer'); -%>
   </div>
