1) Lodash added, 2) Profile page added (works with name only), 3) Card_stats alignment corrected, 4)Inline tyles moved to css file

--- a/views/error_page.ejs
+++ b/views/error_page.ejs
@@ -6,8 +6,7 @@
     <!-- Topnav -->
     <%- include('partials/topnav'); -%>
     <!-- Header -->
-    <div class="header pb-6 d-flex align-items-center"
-         style="min-height: 500px; background-image: url(../assets/mick-haupt-MHeyjronqzw-unsplash.jpg); background-size: cover; background-position: center top;">
+    <div class="header pb-6 d-flex align-items-center error-page-bg-img">
         <!-- Mask -->
         <span class="mask bg-gradient-default opacity-6"></span>
         <!-- Header container -->
