--- a/views/partials/card_stats.ejs
+++ b/views/partials/card_stats.ejs
@@ -1,6 +1,6 @@
 <!-- Card stats -->
 <div class="row">
-    <div class="col-xl-3 col-md-6">
+    <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="card card-stats">
         <!-- Card body -->
         <div class="card-body">
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="col-xl-3 col-md-6">
+    <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="card card-stats">
         <!-- Card body -->
         <div class="card-body">
@@ -58,7 +58,7 @@
         </div>
       </div>
     </div>
-    <div class="col-xl-3 col-md-6">
+    <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="card card-stats">
         <!-- Card body -->
         <div class="card-body">
@@ -87,7 +87,7 @@
         </div>
       </div>
     </div>
-    <div class="col-xl-3 col-md-6">
+    <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="card card-stats">
         <!-- Card body -->
         <div class="card-body">
@@ -116,7 +116,7 @@
         </div>
       </div>
     </div>
-    <div class="col-xl-3 col-md-6">
+    <div class="col-xl-4 col-md-6 cols-sm-6">
       <div class="card card-stats">
         <!-- Card body -->
         <div class="card-body">
