--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -31,6 +31,10 @@
         <a class="nav-link font-weight-bold"
            href="/scrabble-statistics">Scrabble Statistics <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active float-right">
+        <a class="nav-link font-weight-bold"
+           href="/christos">My Profile<span class="sr-only">(current)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
