--- a/views/scrabble_statistics.ejs
+++ b/views/scrabble_statistics.ejs
@@ -6,8 +6,7 @@
   <!-- Topnav -->
   <%- include('partials/topnav'); -%>
   <!-- Header -->
-  <div class="header bg-primary pb-6"
-       style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
+  <div class="header bg-primary pb-6 scrabble-stats-page-bg-img">
     <!-- Mask -->
     <span class="mask bg-gradient-default opacity-3"></span>
     <div class="container-fluid">
