Profile page: Total Statistics created, Partial Statistics still mulfunction

--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -31,10 +31,10 @@
         <a class="nav-link font-weight-bold"
            href="/scrabble-statistics">Scrabble Statistics <span class="sr-only">(current)</span></a>
       </li>
-      <!-- <li class="nav-item active float-right">
+      <li class="nav-item active float-right">
         <a class="nav-link font-weight-bold"
            href="/5fae6b01eeab478c1207e2bf">My Profile<span class="sr-only">(current)</span></a>
-      </li> -->
+      </li>
     </ul>
   </div>
 </nav>
